--- a/css/scotch-map.css
+++ b/css/scotch-map.css
@@ -32,8 +32,8 @@ polygon {
     position: absolute;
     top: 0;
     left: 0;
-    height: 32px;
-    width: 32px;
+    height: 34px;
+    width: 34px;
     background-color: #eee;
 }
 
@@ -44,7 +44,7 @@ polygon {
 
 /* When the checkbox is checked, add a blue background */
 .container input:checked ~ .checkmark {
-    background-color: #2196F3;
+    background-color: #02BEC4;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -78,6 +78,60 @@ main {
     max-width: 100% !important;
 }
 
+body {
+
+    background-color: #02BEC4;
+}
+
 circle {
     mix-blend-mode: screen;
+}
+
+.blog-header {
+    background-color: #0284A8;
+    color: #E1F7E7;
+    font-family: Lato;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
+    padding: 0px;
+    margin: 0;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    cursor: default !important;
+}
+
+.blog-title {
+    cursor: default !important;
+}
+
+.blog-masthead {
+    background-color: #02547D;
+    padding: 0;
+    margin: 0;
+    padding-bottom: 1px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+body > header > div.blog-masthead > div > nav > a {
+    color: #E1F7E7;
+    font-family: Lato;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
+    padding: 20px;
+    background-color: #0284A8;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+
+.container {
+    pagging: 0;
+    margin: 0;
+}
+
+label.container {
+    margin-bottom: 5px;
+}
+
+.btn-git {
+    color: #E1F7E7;
+    font-family: Lato;
+    font-size: 26px;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
+    margin-top: 100px;
 }
