--- a/css/scotch-map.css
+++ b/css/scotch-map.css
@@ -79,24 +79,13 @@ main {
 }
 
 body {
-    background-color: #cce6ff;
+    background-color: #B8DBF2;
 }
 
 circle {
     mix-blend-mode: screen;
 }
 
-.blog-header {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.25), 0 2px 2px rgba(0,0,0,0.22);
-    background: #ffffff !important; /* Old browsers */
-    background: -moz-linear-gradient(top, #003366 0%, #00264d 100%) !important; /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #003366 0%,#00264d 100%) !important; /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #003366 0%,#00264d 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#003366', endColorstr='#00264d',GradientType=0 ); /* IE6-9 */
-    color: white !important;
-    text-shadow: 4px 4px 4px #00264d;
-    cursor: default !important;
-}
 
 .blog-title {
     cursor: default !important;
@@ -105,23 +94,36 @@ circle {
 .blog-masthead {
     border: 0;
     background: #ffffff !important; /* Old browsers */
-    background: -moz-linear-gradient(top, #00264d 0%, #003366 100%) !important; /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #00264d 0%,#003366 100%) !important; /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #00264d 0%,#003366 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00264d', endColorstr='#003366',GradientType=0 ); /* IE6-9 */
+    background: -moz-linear-gradient(top, #3D6491 0%, #223852 100%) !important; /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #3D6491 0%,#223852 100%) !important; /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #3D6491 0%,#223852 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3D6491', endColorstr='#223852',GradientType=0 ); /* IE6-9 */
     color: white !important;
-    text-shadow: 4px 4px 4px #00264d;
+    text-shadow: 4px 4px 4px #3D6491;
 }
+
+.blog-header {
+    box-shadow: 0 8px 3px rgba(0,0,0,0.25), 0 2px 2px rgba(0,0,0,0.22);
+    background: #ffffff !important; /* Old browsers */
+    background: -moz-linear-gradient(top, #223852 0%, #223852 100%) !important; /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #223852 0%,#223852 100%) !important; /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #223852 0%,#223852 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#223852', endColorstr='#223852',GradientType=0 ); /* IE6-9 */
+    color: white !important;
+    text-shadow: 4px 4px 4px #3D6491;
+    cursor: default !important;
+}
+
 body > header > div.blog-masthead > div > nav > a {
     background-color: rgba(0,0,0,0);
     color: white !important;
-    text-shadow: 4px 4px 4px #00264d;
+    text-shadow: 4px 4px 4px #3D6491;
 }
 
 body > header > div.blog-masthead > div > nav > a:hover {
     background-color: rgba(255,255,255,0.4);
     color: white !important;
-    text-shadow: 4px 4px 4px #00264d;
+    text-shadow: 4px 4px 4px #3D6491;
 }
 
 .container {
