--- a/css/scotch-map.css
+++ b/css/scotch-map.css
@@ -79,13 +79,25 @@ main {
 }
 
 body {
-    background-color: #B8DBF2;
+    background: #eeeeee;
+    overflow-x: hidden;
+}
+
+.waves {
+    z-index: -1000;
+    position:fixed;
+    padding:0;
+    margin:0;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background: repeating-linear-gradient(45deg, #5178c1, #4667a6 4px, #3e629a 16px, #334c7a 20px);
 }
 
 circle {
     mix-blend-mode: screen;
 }
-
 
 .blog-title {
     cursor: default !important;
@@ -94,36 +106,36 @@ circle {
 .blog-masthead {
     border: 0;
     background: #ffffff !important; /* Old browsers */
-    background: -moz-linear-gradient(top, #3D6491 0%, #223852 100%) !important; /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #3D6491 0%,#223852 100%) !important; /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #3D6491 0%,#223852 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3D6491', endColorstr='#223852',GradientType=0 ); /* IE6-9 */
+    background: -moz-linear-gradient(top, #636363 0%, #515151 100%) !important; /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #636363 0%, #515151 100%) !important; /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #636363 0%, #515151 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#636363', endColorstr='#515151', GradientType=0); /* IE6-9 */
     color: white !important;
-    text-shadow: 4px 4px 4px #3D6491;
+    text-shadow: 4px 4px 4px #515151;
 }
 
 .blog-header {
-    box-shadow: 0 8px 3px rgba(0,0,0,0.25), 0 2px 2px rgba(0,0,0,0.22);
+    box-shadow: 0 8px 3px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.22);
     background: #ffffff !important; /* Old browsers */
-    background: -moz-linear-gradient(top, #223852 0%, #223852 100%) !important; /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #223852 0%,#223852 100%) !important; /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #223852 0%,#223852 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#223852', endColorstr='#223852',GradientType=0 ); /* IE6-9 */
+    background: -moz-linear-gradient(top, #515151 0%, #393939 100%) !important; /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #515151 0%, #393939 100%) !important; /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #515151 0%, #393939 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#515151', endColorstr='#393939', GradientType=0); /* IE6-9 */
     color: white !important;
-    text-shadow: 4px 4px 4px #3D6491;
+    text-shadow: 4px 4px 4px #515151;
     cursor: default !important;
 }
 
 body > header > div.blog-masthead > div > nav > a {
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     color: white !important;
-    text-shadow: 4px 4px 4px #3D6491;
+    text-shadow: 4px 4px 4px #515151;
 }
 
 body > header > div.blog-masthead > div > nav > a:hover {
-    background-color: rgba(255,255,255,0.4);
+    background-color: rgba(255, 255, 255, 0.4);
     color: white !important;
-    text-shadow: 4px 4px 4px #3D6491;
+    text-shadow: 4px 4px 4px #515151;
 }
 
 .container {
@@ -139,14 +151,18 @@ label.container {
     color: #E1F7E7;
     font-family: Lato;
     font-size: 26px;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
     margin-top: 100px;
 }
 
 .centroid {
-    color: black!important;
+    color: black !important;
 }
 
 .aboot {
     cursor: default !important;
+}
+
+.checkboxes {
+    padding-top: 50px;
 }
