--- a/css/scotch-map.css
+++ b/css/scotch-map.css
@@ -71,17 +71,18 @@
     padding-top: 50px;
 }
 
-.top-3-container {
+.top-5-container {
     display: none;
 }
 
-.top-3-header {
+.top-5-header {
     margin-top: 50px;
     font-size: 2em;
 }
 
-.top-3-item {
-
+.top-5-item:hover {
+    background-color: #A0CA79;
+    color: #41496A;
 }
 
 /*************
@@ -157,7 +158,7 @@ label.container {
 }
 
 .img-fluid {
-    height: 26vw !important;
+    height: 20vw !important;
 }
 
 /*******************************
